<resources>
    <string name="app_name">Task1</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="menu">Menu</string>
    <string name="name">Name</string>
    <string name="contact">Contact</string>
    <string name="email">Email</string>
    <string name="address">Address</string>
    <string name="addcontact">Add Contact</string>
    <string name="title_activity_add_contact">AddContact</string>
    <string name="title_activity_search_contact">SearchContact</string>
    <string name="search">Search</string>
    <string name="close">Close</string>
    <string name="updatecontact">Update Contact</string>
    <string name="title_activity_update_contact">UpdateContact</string>
    <string name="title_activity_delete_contact">DeleteContact</string>




</resources>
